fix(notification-icon): align notification icon with profile image icon (#385)
Currently when a user receives a notification on lenken, the
notification icon falls out of line with the other
components on the navigation bar.

This commit fixes it by toggling between css classes
based on the existence of unread notifications.

[Fixes #155323133]

--- a/src/app/modules/shared/header/header.component.scss
+++ b/src/app/modules/shared/header/header.component.scss
@@ -35,6 +35,11 @@
         display: block;
       }
     }
+    .unread-notifications {
+      @extend .notification;
+      top:-8.5px;
+    }
+
 
     .user-icon {
       padding-right: 15px;
